Fix overflow of search results on mobile devices (docs)
- Fixes #9893

--- a/docs/_static/css/docsearch.overrides.css
+++ b/docs/_static/css/docsearch.overrides.css
@@ -28,3 +28,12 @@ a.algolia-docsearch-suggestion {
 body.theme-dark #search-form .algolia-autocomplete > .form-control {
   background: #1b1238 none repeat scroll 0% 0% padding-box !important;
 }
+
+/* override algolia search default styles to prevent overflow on mobile devices */
+
+@media (max-width: 991px) {
+  #algolia-autocomplete-listbox-0 {
+    width: auto;
+    min-width: 0;
+  }
+}
